# contextbubble

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-yt-dlp.in
.github/workflows/: ci.yml
backend/: agents.py  analysis_agents.py  analysis_store.py  api_models.py  api_routes.py  asr_pipeline.py  asr_provider.py  auth.py  caption_pipeline.py  checks.py  config.py  db.py  job_events.py  jobs.py  media.py  migrations.py  preparation_jobs.py  preparation_runner.py  providers.py  semantic_splitter.py  server.py  transcript_quality.py  transcripts.py  translation_agents.py  translation_cache.py  translation_jobs.py
backend/fixtures/: demo.vtt  fNk_zzaMoSs.vtt
backend/tests/: test_analysis_agents.py  test_api_models.py  test_auth_persistence.py  test_docker_contract.py  test_migrations.py  test_model_bootstrap.py  test_preparation_jobs.py  test_provider_status.py  test_runtime_config.py  test_transcripts.py  test_translation_cache.py  (+1 more)
docker/: bootstrap-model.sh  entrypoint.sh
docs/: README.md  architecture.md  demo-evaluation.md  demo.md  final_project_evaluation.md  limits.md  manual-checks.md  project_review_manual_checks.md  setup-docker.md  setup-native.md
extension/: README.md  backendClient.js  content.js  contentOverlay.js  contentOwnerState.js  contentPreparation.js  contentStorage.js  contentTimeline.js  contentTranslations.js  manifest.json  popup.css  popup.html  popup.js  sidepanel.css  sidepanel.html  sidepanel.js  styles.css
scripts/: check-compose.sh  check.sh
